# Linear-Algebra-Module-from-Scratch

./: .gitignore  README.md  __init__.py  benchmarking.py  matrix.py  preview.ipynb  pyproject.toml  tools.py  vector.py
linalg/: __init__.py  matrix.py  tools.py
