[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linalg-by-chinmoy"
version = "1.0.0"
authors = [
    { name="Chinmoy Majumder", email="chinmoymajumder269@gmail.com" }
]
description = "A linear algebra module written in raw Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache-2.0 license",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]  
